[metadata]
name = into-dbus-python
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/stratis-storage/into-dbus-python
description = "transforms values into properly wrapped dbus-python objects"
license = Apache-2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: into_dbus_python._version.__version__
platforms =
  Linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.12
install_requires =
    dbus-signature-pyparsing
    dbus-python>=1.2.10

package_dir =
    =src

packages =
    into_dbus_python
